--- a/index.html
+++ b/index.html
@@ -6,81 +6,25 @@
     <script src="Scripts/jquery.btechco.excelexport.js"></script>
 </head>
 <body>
-    <div id="dv">
-        <table id="tblExport">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Username</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                    <td>@twitter</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
     <div>
-        <button id="btnExport">Export</button>
+        <h2>jQuery Excel Export Examples</h2>
+        <ul>
+            <li>
+                <a href="exampletable.html">Table</a>
+            </li>
+            <li>
+                <a href="examplejson.html">Json</a>
+
+            </li>
+            <li>
+                <a href="examplexml.html">Xml</a>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
 <script>
     $(document).ready(function () {
-        $("#btnExport").click(function () {
 
-            var excelFile = "<html xmlns:o='urn:schemas-microsoft-com:office:office' xmlns:x='urn:schemas-microsoft-com:office:excel' xmlns='http://www.w3.org/TR/REC-html40'>";
-            excelFile += "<head>";
-            excelFile += "<!--[if gte mso 9]>";
-            excelFile += "<xml>";
-            excelFile += "<x:ExcelWorkbook>";
-            excelFile += "<x:ExcelWorksheets>";
-            excelFile += "<x:ExcelWorksheet>";
-            excelFile += "<x:Name>";
-            excelFile += "{worksheet}";
-            excelFile += "</x:Name>";
-            excelFile += "<x:WorksheetOptions>";
-            excelFile += "<x:DisplayGridlines/>";
-            excelFile += "</x:WorksheetOptions>";
-            excelFile += "</x:ExcelWorksheet>";
-            excelFile += "</x:ExcelWorksheets>";
-            excelFile+=   "</x:ExcelWorkbook>";
-            excelFile += "</xml>";
-            excelFile += "<![endif]-->";
-            excelFile += "</head>";
-            excelFile += "<body>";
-            excelFile += "<table><thead><tr><th>#</th><th>First Name</th><th>Last Name</th><th>Username</th></tr></thead><tbody><tr><td>1</td><td>Mark</td><td>Otto</td><td>@mdo</td></tr><tr><td>2</td><td>Jacob</td><td>Thornton</td><td>@fat</td></tr><tr><td>3</td><td>Larry</td><td>the Bird</td><td>@twitter</td></tr></tbody></table>";
-            excelFile += "</body>";
-            excelFile += "</html>";
-
-            window.open('data:application/vnd.ms-excel,' + excelFile);
-
-            e.preventDefault();
-
-
-            //$("#tblExport").btechco_excelexport({
-            //    containerid: "tblExport"
-            //   , dataset: null
-            //   , datatype: $treedatatype.Table
-            //});
-        });
     });
 </script>
