changes to test the background color issue

--- a/exampletable.html
+++ b/exampletable.html
@@ -18,7 +18,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>1</td>
+                    <td style='background-color:red;'>1</td>
                     <td>Mark</td>
                     <td>Otto</td>
                     <td>@mdo</td>
