--- a/examplejson.html
+++ b/examplejson.html
@@ -27,7 +27,7 @@
                 , datatype: $treedatatype.Json
                 , dataset: dataobj
                 , columns: [
-                    { headertext: "S.No.", datatype: "string", datafield: "id", ishidden: "false", width: "50px" }
+                    { headertext: "S.No.", datatype: "string", format: "xxxx,xx", datafield: "id", ishidden: "false", width: "50px" }
                     , { headertext: "First Name", datatype: "string", datafield: "fname", ishidden: "false", width: "50px" }
                     , { headertext: "Last Name", datatype: "string", datafield: "lname", ishidden: "false", width: "50px" }
                     , { headertext: "Username", datatype: "string", datafield: "uname", ishidden: "false", width: "50px" }
