--- a/exampletable.html
+++ b/exampletable.html
@@ -4,10 +4,11 @@
     <title></title>
     <script src="Scripts/jquery-2.0.1.min.js"></script>
     <script src="Scripts/jquery.btechco.excelexport.js"></script>
+    <script src="Scripts/jquery.base64.js"></script>
 </head>
 <body>
     <div id="dv">
-        <table id="tblExport">
+        <table id="tblExport" style="border:1px solid black; ">
             <thead>
                 <tr>
                     <th>#</th>
