changes for xml format

--- a/examplejson.html
+++ b/examplejson.html
@@ -28,7 +28,7 @@
                 , datatype: $treedatatype.Json
                 , dataset: dataobj
                 , columns: [
-                    { headertext: "S.No.", datatype: "number", datafield: "id", ishidden: false, alignment: "center" }
+                    { headertext: "S.No.", datatype: "number", datafield: "id", ishidden: false }
                     , { headertext: "First Name", datatype: "string", datafield: "fname", width: "100px" }
                     , { headertext: "Last Name", datatype: "string", datafield: "lname", ishidden: false, width: "100px" }
                     , { headertext: "Username", datatype: "string", datafield: "uname", ishidden: true }
