--- a/examplexml.html
+++ b/examplexml.html
@@ -24,10 +24,10 @@
                 , datatype: $treedatatype.Xml
                 , dataset: dataobj
                 , columns: [
-                    { headertext: "S.No.", datatype: "string", datafield: "id", ishidden: "false", width: "50px" }
-                    , { headertext: "First Name", datatype: "string", datafield: "fname", ishidden: "false", width: "50px" }
-                    , { headertext: "Last Name", datatype: "string", datafield: "lname", ishidden: "false", width: "50px" }
-                    , { headertext: "Username", datatype: "string", datafield: "uname", ishidden: "false", width: "50px" }
+                    { headertext: "S.No.", datatype: "string", datafield: "id", ishidden: false, width: "50px" }
+                    , { headertext: "First Name", datatype: "string", datafield: "fname", ishidden: false, width: "50px" }
+                    , { headertext: "Last Name", datatype: "string", datafield: "lname", ishidden: true, width: "50px" }
+                    , { headertext: "Username", datatype: "string", datafield: "uname", ishidden: false, width: "50px" }
                 ]
             });
         });
