--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <li>
                 <a href="examplexml.html">Xml</a>
             </li>
+              <li>
+                <a href="examplejqgrid.html">JqGrid</a>
+            </li>
         </ul>
     </div>
 </body>
