updated datatype enumerator name

--- a/examplejqgrid.html
+++ b/examplejqgrid.html
@@ -33,7 +33,7 @@
 
             $("#dvxml").btechco_excelexport({
                 containerid: "dvxml"
-                , datatype: $treedatatype.JqGrid
+                , datatype: $datatype.JqGrid
                 , dataset: dataobj
                 , columns: [
                     { headertext: "CDL Id", datafield: "cdlId", ishidden: false, width: "50px" }
