--- a/examplejson.html
+++ b/examplejson.html
@@ -25,7 +25,7 @@
 
             $("#dvjson").btechco_excelexport({
                 containerid: "dvjson"
-                , datatype: $treedatatype.Json
+                , datatype: $datatype.Json
                 , dataset: dataobj
                 , columns: [
                     { headertext: "S.No.", datatype: "number", datafield: "id", ishidden: false }
