--- a/exampletable.html
+++ b/exampletable.html
@@ -49,7 +49,7 @@
         $("#btnExport").click(function () {
             $("#tblExport").btechco_excelexport({
                 containerid: "tblExport"
-               , datatype: $treedatatype.Table
+               , datatype: $datatype.Table
             });
         });
     });
