--- a/examplexml.html
+++ b/examplexml.html
@@ -21,7 +21,7 @@
 
             $("#dvxml").btechco_excelexport({
                 containerid: "dvxml"
-                , datatype: $treedatatype.Xml
+                , datatype: $datatype.Xml
                 , dataset: dataobj
                 , columns: [
                     { headertext: "S.No.", datatype: "string", datafield: "id", ishidden: false, width: "50px" }
