--- a/exampletable.html
+++ b/exampletable.html
@@ -4,11 +4,10 @@
     <title></title>
     <script src="Scripts/jquery-2.0.1.min.js"></script>
     <script src="Scripts/jquery.btechco.excelexport.js"></script>
-    <script src="Scripts/jquery.base64.js"></script>
 </head>
 <body>
     <div id="dv">
-        <table id="tblExport" style="border:1px solid black; ">
+        <table id="tblExport" style="border: 1px solid black;">
             <thead>
                 <tr>
                     <th>#</th>
@@ -19,7 +18,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td style='background-color:red;'>1</td>
+                    <td style='background-color: red;'>1</td>
                     <td>Mark</td>
                     <td>Otto</td>
                     <td>@mdo</td>
@@ -44,7 +43,7 @@
     </div>
 </body>
 </html>
-<script>
+<script type="text/javascript">
     $(document).ready(function () {
         $("#btnExport").click(function () {
             $("#tblExport").btechco_excelexport({
