--- a/examplexml.html
+++ b/examplexml.html
@@ -4,7 +4,6 @@
     <title></title>
     <script src="Scripts/jquery-2.0.1.min.js"></script>
     <script src="Scripts/jquery.btechco.excelexport.js"></script>
-    <script src="Scripts/jquery.base64.js"></script>
 </head>
 <body>
     <div id="dvxml">
@@ -14,7 +13,7 @@
     </div>
 </body>
 </html>
-<script>
+<script type="text/javascript">
     $(document).ready(function () {
         $("#btnExport").click(function () {
             var dataobj = "<root><row id='1' fname='Mark' lname='Otto' uname='@mdo'></row><row id='2' fname='Jacob' lname='Thornton' uname='@fat'></row><row id='3' fname='Larry' lname='the Bird' uname='@twitter'></row></root>";
