--- a/examplexml.html
+++ b/examplexml.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
-    <script src="Scripts/jquery-2.0.1.min.js"></script>
-    <script src="Scripts/jquery.btechco.excelexport.js"></script>
+    <script src="Scripts/jquery-2.1.0.min.js"></script>
+    <script src="Scripts/jquery.battatech.excelexport.js"></script>
 </head>
 <body>
     <div id="dvxml">
