added returnUri feature on suggestion of James

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
                 <a href="exampletable.html">Table</a>
             </li>
             <li>
+                <a href="exampleTableReturnUri.html">Table (With ReturnUri Feature)</a>
+            </li>
+            <li>
                 <a href="examplejson.html">Json</a>
             </li>
             <li>
                 <a href="examplexml.html">Xml</a>
             </li>
-              <li>
+            <li>
                 <a href="examplejqgrid.html">JqGrid</a>
             </li>
         </ul>
