Added functionality for custom encoding (default utf-8)

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <li>
                 <a href="examplejqgrid.html">JqGrid</a>
             </li>
+            <li>
+                <a href="exampleencoding.html">Custom Encoding</a>
+            </li>
         </ul>
     </div>
 </body>
