removed global defining of datatype

--- a/exampleTableReturnUri.html
+++ b/exampleTableReturnUri.html
@@ -48,9 +48,9 @@
 <script type="text/javascript">
     $(document).ready(function () {
         $("#btnExport").on('click', function () {
-            var uri = $("#tblExport").btechco_excelexport({
+            var uri = $("#tblExport").battatech_excelexport({
                 containerid: "tblExport"
-                , datatype: $datatype.Table
+                , datatype: 'table'
                 , returnUri: true
             });
 
