--- a/exampleencoding.html
+++ b/exampleencoding.html
@@ -53,9 +53,9 @@
 <script type="text/javascript">
     $(document).ready(function () {
         $("#btnExport").click(function () {
-            $("#tblExport").btechco_excelexport({
+            $("#tblExport").battatech_excelexport({
                 containerid: "tblExport"
-               , datatype: $datatype.Table
+               , datatype: 'table'
                , encoding: "UTF-8"
             });
         });
