--- a/examplejqgrid.html
+++ b/examplejqgrid.html
@@ -30,9 +30,9 @@
                 }
             });
 
-            $("#dvxml").btechco_excelexport({
+            $("#dvxml").battatech_excelexport({
                 containerid: "dvxml"
-                , datatype: $datatype.JqGrid
+                , datatype: 'jqgrid'
                 , dataset: dataobj
                 , columns: [
                     { headertext: "S.No.", datatype: "number", datafield: "id", ishidden: false }
