--- a/examplejson.html
+++ b/examplejson.html
@@ -22,9 +22,9 @@
                 , { id: 3, fname: "Larry", lname: "the Bird", uname: "@twitter", dt: "2013/12/01" }
             ];
 
-            $("#dvjson").btechco_excelexport({
+            $("#dvjson").battatech_excelexport({
                 containerid: "dvjson"
-                , datatype: $datatype.Json
+                , datatype: 'json'
                 , dataset: dataobj
                 , columns: [
                     { headertext: "S.No.", datatype: "number", datafield: "id", ishidden: false }
