--- a/exampletable.html
+++ b/exampletable.html
@@ -46,9 +46,9 @@
 <script type="text/javascript">
     $(document).ready(function () {
         $("#btnExport").click(function () {
-            $("#tblExport").btechco_excelexport({
+            $("#tblExport").battatech_excelexport({
                 containerid: "tblExport"
-               , datatype: $datatype.Table
+               , datatype: 'table'
             });
         });
     });
