added compatibility with bower

--- a/examplejson.html
+++ b/examplejson.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-    <script src="Scripts/jquery.battatech.excelexport.js"></script>
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="Scripts/jquery.battatech.excelexport.js"></script>
 </head>
 <body>
     <div id="dvjson">
