--- a/exampleencoding.html
+++ b/exampleencoding.html
@@ -3,8 +3,8 @@
 <head>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
     <title></title>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-    <script src="Scripts/jquery.battatech.excelexport.js"></script>
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="Scripts/jquery.battatech.excelexport.js"></script>
 </head>
 <body>
     <div id="dv">
