--- a/src/exampleencoding.html
+++ b/src/exampleencoding.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
     <title></title>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="Scripts/jquery.battatech.excelexport.js"></script>
+    <script type="text/javascript" src="Scripts/jquery.techbytarun.excelexportjs.js"></script>
 </head>
 <body>
     <div id="dv">
@@ -53,7 +53,7 @@
 <script type="text/javascript">
     $(document).ready(function () {
         $("#btnExport").click(function () {
-            $("#tblExport").battatech_excelexport({
+            $("#tblExport").excelexportjs({
                 containerid: "tblExport"
                , datatype: 'table'
                , encoding: "UTF-8"
