--- a/src/examplejqgrid.html
+++ b/src/examplejqgrid.html
@@ -3,7 +3,7 @@
 <head>
     <title></title>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="Scripts/jquery.battatech.excelexport.js"></script>
+    <script type="text/javascript" src="Scripts/jquery.techbytarun.excelexportjs.js"></script>
 </head>
 <body>
     <div id="dvxml">
@@ -30,7 +30,7 @@
                 }
             });
 
-            $("#dvxml").battatech_excelexport({
+            $("#dvxml").excelexportjs({
                 containerid: "dvxml"
                 , datatype: 'jqgrid'
                 , dataset: dataobj
