--- a/src/examplejson.html
+++ b/src/examplejson.html
@@ -3,7 +3,7 @@
 <head>
     <title></title>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="Scripts/jquery.battatech.excelexport.js"></script>
+    <script type="text/javascript" src="Scripts/jquery.techbytarun.excelexportjs.js"></script>
 </head>
 <body>
     <div id="dvjson">
@@ -22,7 +22,7 @@
                 , { id: 3, fname: "Larry", lname: "the Bird", uname: "@twitter", dt: "2013/12/01" }
             ];
 
-            $("#dvjson").battatech_excelexport({
+            $("#dvjson").excelexportjs({
                 containerid: "dvjson"
                 , datatype: 'json'
                 , dataset: dataobj
