--- a/src/exampletable.html
+++ b/src/exampletable.html
@@ -3,7 +3,7 @@
 <head>
     <title></title>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="Scripts/jquery.battatech.excelexport.js"></script>
+    <script type="text/javascript" src="Scripts/jquery.techbytarun.excelexportjs.js"></script>
 </head>
 <body>
     <div id="dv">
@@ -46,7 +46,7 @@
 <script type="text/javascript">
     $(document).ready(function () {
         $("#btnExport").click(function () {
-            $("#tblExport").battatech_excelexport({
+            $("#tblExport").excelexportjs({
                 containerid: "tblExport"
                , datatype: 'table'
             });
