--- a/src/examplexml.html
+++ b/src/examplexml.html
@@ -3,7 +3,7 @@
 <head>
     <title></title>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="Scripts/jquery.battatech.excelexport.js"></script>
+    <script type="text/javascript" src="Scripts/jquery.techbytarun.excelexportjs.js"></script>
 </head>
 <body>
     <div id="dvxml">
@@ -18,7 +18,7 @@
         $("#btnExport").click(function () {
             var dataobj = "<root><row id='1' fname='Mark' lname='Otto' uname='@mdo'></row><row id='2' fname='Jacob' lname='Thornton' uname='@fat'></row><row id='3' fname='Larry' lname='the Bird' uname='@twitter'></row></root>";
 
-            $("#dvxml").battatech_excelexport({
+            $("#dvxml").excelexportjs({
                 containerid: "dvxml"
                 , datatype: 'xml'
                 , dataset: dataobj
