lots of changes

--- a/src/index.html
+++ b/src/index.html
@@ -1,31 +1,13 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <title></title>
 </head>
+
 <body>
-    <div>
-        <h2>jQuery Excel Export Examples</h2>
-        <ul>
-            <li>
-                <a href="exampletable.html">Table</a>
-            </li>
-            <li>
-                <a href="exampleTableReturnUri.html">Table (With ReturnUri Feature)</a>
-            </li>
-            <li>
-                <a href="examplejson.html">Json</a>
-            </li>
-            <li>
-                <a href="examplexml.html">Xml</a>
-            </li>
-            <li>
-                <a href="examplejqgrid.html">JqGrid</a>
-            </li>
-            <li>
-                <a href="exampleencoding.html">Custom Encoding</a>
-            </li>
-        </ul>
-    </div>
+    <div></div>
+    <script type="module" src="excelExportJs.js"></script>
 </body>
+
 </html>
